# sparqlTest

./: CMakeLists.txt  main.cpp
bean/: Triple.cpp  Triple.h
lib/: libantlr4-runtime.so.4.9
parser/: BasicQuery.cpp  BasicQuery.h  ParseSparql.cpp  ParseSparql.h
sparql/: Sparql.g4  SparqlLexer.cpp  SparqlLexer.h  SparqlListener.cpp  SparqlListener.h  SparqlParser.cpp  SparqlParser.h  SparqlVisitor.cpp  SparqlVisitor.h
test/: data1.txt  data2.txt  data3.txt  test1_1.sql  test2_1.sql  test3_0_0.sql  test3_0_1.sql  test3_1.sql  test3_10.sql  test3_2.sql  test3_3.sql  test3_4.sql  test3_5.sql  test3_6.sql  test3_7.sql  test3_8.sql  test3_9.sql  testQuery.cpp  testQuery.h
